# pytest-ui

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
pytest_ui/: __init__.py  app.py  cli.py  parser.py  runner.py
pytest_ui/.streamlit/: config.toml
tests/: test_main.py
