[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-ui"
version = "0.1.0"
description = "A lightweight user interface for running and inspecting pytest test suites. Designed to simplify test discovery, execution, and result visualization for developers and teams."
authors = [
  { name = "Andoniaina Nomenjanahary", email = "ando01niaina@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.40.0",
  "pytest>=9.0.0",
  "pytest-json-report>=1.5.0",
  "click>=8.0.0",
  "pandas>=2.0.0",
  "plotly>=6.4.0"
]

[tool.setuptools.package-data]
pytest_ui = [
    "static/**/*",
    "assets/**/*",
]

[project.urls]
Homepage = "https://github.com/AndoniainaNantenaina/pytest-ui"
Documentation = "https://github.com/AndoniainaNantenaina/pytest-ui#readme"
Source = "https://github.com/AndoniainaNantenaina/pytest-ui"

[project.scripts]
pytest-ui = "pytest_ui.cli:main"
